@@ -21,8 +21,8 @@
 #ifndef FFMPEG_AVFORMAT_H
 #define FFMPEG_AVFORMAT_H
 
-#define LIBAVFORMAT_VERSION_INT ((51<<16)+(16<<8)+1)
-#define LIBAVFORMAT_VERSION     51.16.1
+#define LIBAVFORMAT_VERSION_INT ((51<<16)+(17<<8)+0)
+#define LIBAVFORMAT_VERSION     51.17.0
 #define LIBAVFORMAT_BUILD       LIBAVFORMAT_VERSION_INT
 
 #define LIBAVFORMAT_IDENT       "Lavf" AV_STRINGIFY(LIBAVFORMAT_VERSION)
