@@ -100,6 +100,7 @@ version <next>
 - DNxHD encoder
 - H.264 PAFF decoding
 - Nellymoser ASAO decoder
+- Beam Software SIFF demuxer and decoder
 
 version 0.4.9-pre1:
 
